# Epitech-Bundle

./: README.md
B4 - Year-End-Project - Indie Studio/: .clang-format  .clang-tidy  CMakeLists.txt  justfile
B4 - Year-End-Project - Indie Studio/assets/models/: bomb.glb  box.glb  fire.glb  fire.iqm  item.glb  player.iqm
B4 - Year-End-Project - Indie Studio/include/Engine/ECS/: Entity.hpp
B4 - Year-End-Project - Indie Studio/include/Engine/ECS/Components/: AI.hpp  Component.hpp  (+3 more)
B4 - Year-End-Project - Indie Studio/include/Engine/Tools/: Error.hpp  InstanceOf.hpp  Timer.hpp
B4 - Year-End-Project - Indie Studio/include/Indie/GameCore/: Bomberman.hpp  Core.hpp  GameData.hpp  MyCameraman.hpp  Save.hpp
B4 - Year-End-Project - Indie Studio/include/Indie/Prefabs/: Bomb.hpp  Crate.hpp  Fire.hpp  Item.hpp  Player.hpp  Wall.hpp
B4 - Year-End-Project - Indie Studio/include/Indie/Scenes/: Game.hpp  Home.hpp  Load.hpp  PlayerSelect.hpp  Splash.hpp
B4 - Year-End-Project - Indie Studio/include/Indie/UI/: Button.hpp
B4 - Year-End-Project - Indie Studio/src/: main.cpp
B4 - Year-End-Project - Indie Studio/src/Engine/Tools/: Error.cpp  Timer.cpp
B4 - Year-End-Project - Indie Studio/src/Indie/GameCore/: Core.cpp  GameData.cpp  MyCameraman.cpp  Save.cpp
B4 - Year-End-Project - Indie Studio/src/Indie/Prefabs/: Bomb.cpp  Crate.cpp  Fire.cpp  Item.cpp  Player.cpp  Wall.cpp
B4 - Year-End-Project - Indie Studio/src/Indie/Scenes/: Game.cpp  Home.cpp  Load.cpp  PlayerSelect.cpp  Splash.cpp
B4 - Year-End-Project - Indie Studio/src/Indie/UI/: Button.cpp
B4 - Year-End-Project - Indie Studio/src/Lib/: Animation.cpp  AudioDevice.cpp  CMakeLists.txt  Cameraman.cpp  CollisionChecker.cpp  Color.cpp  Controller.cpp  DeltaTime.cpp  Fps.cpp  Model3D.cpp  Mouse.cpp  Music.cpp  Plane.cpp  Rectangle.cpp  Round.cpp  Sound.cpp  Sprite.cpp  Text.cpp  Window.cpp
B4 - Year-End-Project - Indie Studio/src/Lib/cmake/: Findraylib.cmake
B4 - Year-End-Project - Indie Studio/src/Lib/include/: AWindow.hpp  Animation.hpp  AudioDevice.hpp  Cameraman.hpp  CollisionChecker.hpp  Color.hpp  Controller.hpp  DeltaTime.hpp  Fps.hpp  Model3D.hpp  Mouse.hpp  Music.hpp  Plane.hpp  Rectangle.hpp  Round.hpp  Scene.hpp  Sound.hpp  Sprite.hpp  Text.hpp  Vector.hpp  Window.hpp
B5 - Advanced C++/: CMakeLists.txt  Doxyfile  README.md  build.bat  justfile
B5 - Advanced C++/assets/jsons/: pattern_enemy_group.json
B5 - Advanced C++/docs/: ClientProtocol.md  Contributor.md  CustomLevel.md  ECS.md  ServerProtocol.md  UsageLinux.md  UsageWindows.md
B5 - Advanced C++/include/Client/: Game.hpp  Menu.hpp  UdpClient.hpp
B5 - Advanced C++/include/ECS/Components/: AnimationComponent.hpp  BehaviorComponent.hpp  DestroyableComponent.hpp  DrawableComponent.hpp  HitboxComponent.hpp  IComponent.hpp  InputComponent.hpp  MouvementComponent.hpp  MusicComponent.hpp  SoundComponent.hpp  StatComponent.hpp  TextComponent.hpp  TimerComponent.hpp  TransformComponent.hpp
B5 - Advanced C++/include/ECS/Entity/: Entity.hpp  EntityManager.hpp
B5 - Advanced C++/include/ECS/Systems/: AnimationSystem.hpp  BehaviorSystem.hpp  DestroyableSystem.hpp  DrawableSystem.hpp  HitboxSystem.hpp  MouvementSystem.hpp  MusicSystem.hpp  SoundSystem.hpp
B5 - Advanced C++/include/Error/: Error.hpp
B5 - Advanced C++/include/Json/: JsonTools.hpp
B5 - Advanced C++/include/Lib/: Lib.hpp  Music.hpp  Sound.hpp  SoundManager.hpp  Sprite.hpp  Text.hpp  Timer.hpp  Window.hpp
B5 - Advanced C++/include/NetworkLib/: HostHandler.hpp  ISocket.hpp  LinuxSocket.hpp  LinuxSocketSelector.hpp  SocketFactory.hpp  SocketSelector.hpp  SocketSelectorFactory.hpp  WindowsSocket.hpp  WindowsSocketSelector.hpp
B5 - Advanced C++/include/Serializer/: BitSize.hpp  Serializer.hpp
B5 - Advanced C++/include/Server/: RType.hpp  Server.hpp
B5 - Advanced C++/include/Time/: Clock.hpp
B5 - Advanced C++/include/Tools/: Curve.hpp  EntityIterator.hpp  InstanceOf.hpp  Keyboard.hpp  Shortcuts.hpp
B5 - Advanced C++/src/Client/: Game.cpp  Menu.cpp  UdpClient.cpp  main.cpp
B5 - Advanced C++/src/ECS/: CMakeLists.txt
B5 - Advanced C++/src/ECS/Components/: AnimationComponent.cpp  BehaviorComponent.cpp  DestroyableComponent.cpp  DrawableComponent.cpp  HitboxComponent.cpp  InputComponent.cpp  MouvementComponent.cpp  MusicComponent.cpp  SoundComponent.cpp  StatComponent.cpp  TextComponent.cpp  TimerComponent.cpp  TransformComponent.cpp
B5 - Advanced C++/src/ECS/Entity/: Entity.cpp  EntityManager.cpp
B5 - Advanced C++/src/ECS/Systems/: AnimationSystem.cpp  BehaviorSystem.cpp  DestroyableSystem.cpp  DrawableSystem.cpp  HitboxSystem.cpp  MouvementSystem.cpp  MusicSystem.cpp  SoundSystem.cpp
B5 - Advanced C++/src/Error/: CMakeLists.txt  Error.cpp
B5 - Advanced C++/src/Json/: CMakeLists.txt  JsonTools.cpp
B5 - Advanced C++/src/Lib/: CMakeLists.txt  Lib.cpp  Music.cpp  Sound.cpp  SoundManager.cpp  Sprite.cpp  Text.cpp  Timer.cpp  Window.cpp
B5 - Advanced C++/src/NetworkLib/: CMakeLists.txt  HostHandler.cpp  LinuxSocket.cpp  LinuxSocketSelector.cpp  SocketFactory.cpp  SocketSelectorFactory.cpp  WindowsSocket.cpp  WindowsSocketSelector.cpp
B5 - Advanced C++/src/Serializer/: CMakeLists.txt  Serializer.cpp
B5 - Advanced C++/src/Server/: RType.cpp  Server.cpp  main.cpp
B5 - Advanced C++/src/Server/RType/: Asteroid.cpp  Boss.cpp  Enemies.cpp  Misc.cpp  Player.cpp  Spawner.cpp
B5 - Advanced C++/src/Snake/: CMakeLists.txt  Snake.cpp  Snake.hpp
B5 - Advanced C++/src/Time/: CMakeLists.txt  Clock.cpp
B5 - Advanced C++/src/Tools/: CMakeLists.txt  Curve.cpp
B5 - Advanced C++/tests/ECS/Components/: BehaviorComponent_t.cpp  DestroyableComponent_t.cpp  HitboxComponent_t.cpp  InputComponent_t.cpp  MouvementComponent_t.cpp  StatComponent_t.cpp  TransformComponent_t.cpp
B5 - Advanced C++/tests/ECS/Entity/: EntityManager_t.cpp  Entity_t.cpp
B5 - Advanced C++/tests/ECS/Systems/: BehaviorSystem_t.cpp  DestroyableSystem_t.cpp  HitboxSystem_t.cpp  MouvementSystem_t.cpp
B5 - Advanced C++/tests/Tools/: Curve_t.cpp  EntityIterator_t.cpp  Error_t.cpp  JsonTools_t.cpp  Tools_t.cpp  test1.json
(+3242 files in other folders)
